cabal-version:      2.4
name:               ourstuff
version:            0.1.0.0
author:             Simon Kohlmeyer
maintainer:         simon.kohlmeyer@gmail.com
extra-source-files: CHANGELOG.md

executable ourstuff
  main-is:          Main.hs
  build-depends:
    , base ^>=4.15.1.0
    , warp ^>= 3.3.20
    , Spock ^>= 0.14.0.0
  hs-source-dirs:   app
  default-language: Haskell2010
