cabal-version:      2.4
name:               ourstuff
version:            0.1.0.0
author:             Simon Kohlmeyer
maintainer:         simon.kohlmeyer@gmail.com
extra-source-files: CHANGELOG.md

executable ourstuff
  main-is:          Main.hs
  build-depends:
    , base                ^>=4.15.1.0
    , http-types          ^>=0.12.3
    , neat-interpolation  ^>=0.5.1.3
    , postgresql-simple   ^>=0.6.2
    , reroute             ^>=0.6.0.0
    , Spock               ^>=0.14.0.0
    , text                ^>=1.2.5.0
    , time                ^>=1.9.3
    , warp                ^>=3.3.20

  hs-source-dirs:   app
  default-language: Haskell2010
