cabal-version:      2.4
name:               ourstuff
version:            0.1.0.0
author:             Simon Kohlmeyer
maintainer:         simon.kohlmeyer@gmail.com
extra-source-files: CHANGELOG.md

common common
  default-language: Haskell2010
  ghc-options:
    -Weverything -Wno-missing-exported-signatures
    -Wno-missing-import-lists -Wno-missed-specialisations
    -Wno-all-missed-specialisations -Wno-unsafe -Wno-safe
    -Wno-missing-local-signatures -Wno-monomorphism-restriction
    -Wno-implicit-prelude
  default-extensions:
    ImportQualifiedPost
    TypeApplications
    ScopedTypeVariables

  build-depends:    base ^>=4.15.1.0

executable ourstuff
  import:         common
  main-is:        Main.hs
  build-depends:
    , http-types          ^>=0.12.3
    , neat-interpolation  ^>=0.5.1.3
    , ourstuff
    , postgresql-simple   ^>=0.6.2
    , reroute             ^>=0.6.0.0
    , shakespeare         ^>=2.0.27
    , Spock               ^>=0.14.0.0
    , text                ^>=1.2.5.0
    , time                ^>=1.9.3
    , wai                 ^>=3.2.3
    , wai-extra           ^>=3.1.10
    , warp                ^>=3.3.20

  hs-source-dirs: app

library
  import:          common
  hs-source-dirs:  src

  -- cabal-fmt: expand src
  exposed-modules:
    OurStuff.App
    OurStuff.DB
    OurStuff.Handlers
    OurStuff.Paths

-- vim: ts=2 sts=2 sw=2
