cabal-version:      2.4
name:               ourstuff
version:            0.1.0.0
author:             Simon Kohlmeyer
maintainer:         simon.kohlmeyer@gmail.com
extra-source-files: CHANGELOG.md

common common
  default-language:   Haskell2010
  ghc-options:
    -Weverything -Wno-missing-exported-signatures
    -Wno-missing-import-lists -Wno-missed-specialisations
    -Wno-all-missed-specialisations -Wno-missing-safe-haskell-mode
    -Wno-unsafe -Wno-safe -Wno-missing-local-signatures
    -Wno-monomorphism-restriction -Wno-implicit-prelude
    -Wno-partial-type-signatures

  default-extensions:
    BlockArguments
    EmptyCase
    ImportQualifiedPost
    LambdaCase
    MultiWayIf
    OverloadedStrings
    PartialTypeSignatures
    RecordWildCards
    ScopedTypeVariables
    TypeApplications
    ApplicativeDo
    DerivingStrategies
    GeneralizedNewtypeDeriving

  build-depends:
    , base    ^>=4.15.1.0
    , relude  ^>=1.0.0.1
    , Spock   ^>=0.14.0.0

  mixins:
    base hiding (Prelude),
    relude (Relude as Prelude),
    relude

executable ourstuff
  import:         common
  main-is:        Main.hs
  build-depends:  ourstuff
  hs-source-dirs: app

library
  import:          common
  hs-source-dirs:  src
  build-depends:
    , containers         ^>=0.6.4.1
    , http-types         ^>=0.12.3
    , lucid              ^>=2.11.0
    , postgresql-simple  ^>=0.6.2
    , Spock-lucid        ^>=0.4.0.1
    , text               ^>=1.2.5.0
    , time               ^>=1.9.3
    , validation         ^>=1.1.2
    , wai                ^>=3.2.3
    , wai-extra          ^>=3.1.10

  -- cabal-fmt: expand src
  exposed-modules:
    OurStuff.App
    OurStuff.AppTypes
    OurStuff.CreateItems
    OurStuff.CreateItems.View
    OurStuff.DB
    OurStuff.Handlers
    OurStuff.Item
    OurStuff.Paths
    OurStuff.Validation

-- vim: ts=2 sts=2 sw=2
