cabal-version:      2.4
name:               ourstuff
version:            0.1.0.0
author:             Simon Kohlmeyer
maintainer:         simon.kohlmeyer@gmail.com
extra-source-files: CHANGELOG.md

common common
  default-language:   Haskell2010
  ghc-options:
    -Weverything -Wno-missing-exported-signatures
    -Wno-missing-import-lists -Wno-missed-specialisations
    -Wno-all-missed-specialisations -Wno-missing-safe-haskell-mode
    -Wno-unsafe -Wno-safe -Wno-missing-local-signatures
    -Wno-monomorphism-restriction -Wno-implicit-prelude
    -Wno-partial-type-signatures

  default-extensions:
    ApplicativeDo
    BlockArguments
    DeriveAnyClass
    DeriveGeneric
    DerivingStrategies
    EmptyCase
    FlexibleContexts
    FlexibleInstances
    GeneralizedNewtypeDeriving
    ImportQualifiedPost
    LambdaCase
    MultiParamTypeClasses
    MultiWayIf
    OverloadedStrings
    PartialTypeSignatures
    RecordWildCards
    ScopedTypeVariables
    StandaloneDeriving
    TypeApplications
    UndecidableInstances

  build-depends:
    , base
    , relude

  mixins:
    base hiding (Prelude),
    relude (Relude as Prelude),
    relude

executable ourstuff
  import:         common
  main-is:        Main.hs
  build-depends:
    , ourstuff
    , Spock

  hs-source-dirs: app

common library-deps
  build-depends:
    , beam-core
    , beam-postgres
    , containers
    , http-types
    , lucid
    , more-containers
    , postgresql-simple
    , Spock
    , Spock-lucid
    , tagged
    , text
    , time
    , type-map
    , validation
    , wai
    , wai-extra

library
  import:          common, library-deps
  hs-source-dirs:  src

  -- cabal-fmt: expand src
  exposed-modules:
    Ourstuff.App
    Ourstuff.AppTypes
    Ourstuff.CreateItems
    Ourstuff.CreateItems.View
    Ourstuff.DB
    Ourstuff.Handlers
    Ourstuff.Item
    Ourstuff.Paths
    Ourstuff.Validation

test-suite test
  import:          common, library-deps
  type:            exitcode-stdio-1.0
  hs-source-dirs:  tests
  main-is:         Driver.hs

  -- build-tool-depends:
  --   tasty-discover:tasty-discover
  build-depends:
    , hspec
    , ourstuff
    , tasty
    , tasty-discover
    , tasty-hspec

  -- cabal-fmt: expand tests
  exposed-modules:
    Driver
    SomeTest

-- vim: ts=2 sts=2 sw=2
